{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 15,
  "lineage": "bb5aa0c1-de10-81ca-d25f-1e4dcfc7faa3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0836bb49ca9ae333c",
            "domain": "vpc",
            "id": "eipalloc-0836bb49ca9ae333c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-207-251-114.compute-1.amazonaws.com",
            "public_ip": "44.207.251.114",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406490543816:internet-gateway/igw-022efb6cb67775263",
            "id": "igw-022efb6cb67775263",
            "owner_id": "406490543816",
            "vpc_id": "vpc-076c1435fc2f1655f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0836bb49ca9ae333c",
            "connectivity_type": "public",
            "id": "nat-0c88658181f7c6e54",
            "network_interface_id": "eni-089b866da3f0e990e",
            "private_ip": "10.0.0.221",
            "public_ip": "44.207.251.114",
            "subnet_id": "subnet-0bf35a5f7e7c3565e",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.gateway",
            "aws_subnet.us-east-1a-public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-east-1-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406490543816:route-table/rtb-07ea9db96458f3051",
            "id": "rtb-07ea9db96458f3051",
            "owner_id": "406490543816",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c88658181f7c6e54",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-076c1435fc2f1655f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.nat",
            "aws_subnet.us-east-1a-public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-east-1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406490543816:route-table/rtb-02d53759ddde3f334",
            "id": "rtb-02d53759ddde3f334",
            "owner_id": "406490543816",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022efb6cb67775263",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-076c1435fc2f1655f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab811fd00eded997",
            "route_table_id": "rtb-07ea9db96458f3051",
            "subnet_id": "subnet-0b3ca7696c421f1c4"
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.nat",
            "aws_route_table.us-east-1-private",
            "aws_subnet.us-east-1a-private",
            "aws_subnet.us-east-1a-public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e134a98ab019b29c",
            "route_table_id": "rtb-07ea9db96458f3051",
            "subnet_id": "subnet-0f91799735f139867"
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.nat",
            "aws_route_table.us-east-1-private",
            "aws_subnet.us-east-1a-public",
            "aws_subnet.us-east-1b-private",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09df25792b2824720",
            "route_table_id": "rtb-02d53759ddde3f334",
            "subnet_id": "subnet-0bf35a5f7e7c3565e"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.us-east-1-public",
            "aws_subnet.us-east-1a-public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09981cfd01f6af83a",
            "route_table_id": "rtb-02d53759ddde3f334",
            "subnet_id": "subnet-02c5c649969dc73b5"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.us-east-1-public",
            "aws_subnet.us-east-1b-public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406490543816:subnet/subnet-0b3ca7696c421f1c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3ca7696c421f1c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406490543816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-076c1435fc2f1655f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406490543816:subnet/subnet-0bf35a5f7e7c3565e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf35a5f7e7c3565e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406490543816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-076c1435fc2f1655f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1b-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406490543816:subnet/subnet-0f91799735f139867",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f91799735f139867",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406490543816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-076c1435fc2f1655f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406490543816:subnet/subnet-02c5c649969dc73b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c5c649969dc73b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406490543816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-076c1435fc2f1655f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406490543816:vpc/vpc-076c1435fc2f1655f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d5e62e0f8bae9e4",
            "default_route_table_id": "rtb-0ba75cc388d203e91",
            "default_security_group_id": "sg-093d5e8b349f6fe41",
            "dhcp_options_id": "dopt-0a9f7909336f38a57",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076c1435fc2f1655f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba75cc388d203e91",
            "owner_id": "406490543816",
            "tags": {
              "Name": "terraform-aws-vpc"
            },
            "tags_all": {
              "Name": "terraform-aws-vpc"
            }
          }
        }
      ]
    }
  ]
}